# simq

./: .clippy.toml  .gitignore  BENCHMARKS.md  Cargo.toml  E2E_TESTING_PLAN.md  LICENSE-APACHE  LICENSE-MIT  README.md  clippy.toml  rustfmt.toml
ferriq/: Cargo.toml
ferriq-backend/: Cargo.toml
ferriq-backend/src/: backend.rs  backend_selector.rs  error.rs  gate_decomposition.rs  ibm_quantum.rs  lib.rs  local_simulator.rs  routing.rs  transpiler.rs
ferriq-backend/tests/: comprehensive_e2e.rs  edge_cases.rs
ferriq-compiler/: Cargo.toml  README.md
ferriq-compiler/benches/: README.md  execution_planning.rs  optimization_passes.rs  pass_performance.rs
ferriq-compiler/examples/: advanced_pipeline_demo.rs  benchmark_overhead.rs  benchmark_usage.rs  caching_demo.rs  circuit_analysis.rs  commutation_demo.rs  execution_plan_demo.rs  gate_decomposition.rs  gate_fusion.rs  lazy_evaluation.rs  pipeline_demo.rs  template_matching_demo.rs
ferriq-compiler/src/: adaptive_pipeline.rs  analysis.rs  cache.rs  cached_compiler.rs  circuit_analysis_pass.rs  compiler.rs  decomposition.rs  execution_plan.rs  fusion.rs  hardware_aware.rs  lazy.rs  lib.rs  matrix_computation.rs  matrix_utils.rs  pipeline.rs
ferriq-compiler/tests/: compiler_internals.rs  comprehensive_e2e.rs  decomposition_internals.rs  integration_test.rs  lazy_evaluation.rs  passes_internals.rs
ferriq-gates/: COMPILE_TIME_CACHING.md  CUSTOM_GATES_GUIDE.md  Cargo.toml
ferriq-gates/benches/: compile_time_cache.rs  gate_operations.rs
ferriq-gates/examples/: custom_gates_tutorial.rs  gate_matrices.rs  lookup_table_demo.rs
ferriq-gates/src/: compile_time_cache.rs  custom.rs  gate_registry.rs  generated.rs  lib.rs  lookup.rs  matrix_ops.rs  optimized.rs  standard.rs
ferriq-gates/tests/: all_gates_test.rs  comprehensive_e2e.rs  edge_cases.rs  macro_e2e.rs
ferriq-py/: Cargo.toml  README.md  pyproject.toml
ferriq-py/examples/: 00_getting_started.py  basic_circuit.py  noise_simulation.py  parameterized_circuit.py  vqe_example.py
ferriq-py/src/: lib.rs
ferriq-py/tests/: __init__.py  conftest.py  test_backend.py  test_basic.py  test_circuit.py  test_gates.py  test_noise.py  test_simulation.py
ferriq-state/: Cargo.toml  QUICK_START.md  README.md
ferriq-state/benches/: measurement_performance.rs  observable_performance.rs  probability_optimization.rs  state_operations.rs
ferriq-state/examples/: adaptive_conversion.rs  computational_basis_measurement.rs  cow_branching.rs  efficient_sampling_demo.rs  pauli_observables.rs  quantum_teleportation.rs  sparse_state_demo.rs  validation_demo.rs
ferriq-state/src/: adaptive_state.rs  cow_state.rs  dense_state.rs  density_matrix.rs  density_matrix_simulator.rs  error.rs  lib.rs  measurement.rs  monte_carlo_simulator.rs  observable.rs  simd.rs  sparse_state.rs  state_vector.rs  validation.rs
ferriq-state/tests/: adaptive_boundary_e2e.rs  comprehensive_e2e.rs  cow_advanced_e2e.rs  dense_advanced_e2e.rs  density_matrix_e2e.rs  measurement_e2e.rs  observable_e2e.rs  simd_internals_e2e.rs  sparse_advanced_e2e.rs
ferriq/benches/: end_to_end.rs
ferriq/examples/: fluent_api.rs  vqe_fluent.rs  xcheck_bench.rs
ferriq/src/: circuit.rs  lib.rs
ferriq/tests/: comprehensive_e2e.rs
simq/: Cargo.toml
simq-backend/: Cargo.toml
simq-backend/src/: backend.rs  backend_selector.rs  capabilities.rs  error.rs  gate_decomposition.rs  ibm_quantum.rs  lib.rs  local_simulator.rs  result.rs  routing.rs  transpiler.rs
simq-backend/tests/: comprehensive_e2e.rs  edge_cases.rs
simq-compiler/: Cargo.toml  README.md
simq-compiler/benches/: README.md  execution_planning.rs  optimization_passes.rs  pass_performance.rs
simq-compiler/examples/: advanced_pipeline_demo.rs  benchmark_overhead.rs  benchmark_usage.rs  caching_demo.rs  circuit_analysis.rs  commutation_demo.rs  execution_plan_demo.rs  gate_decomposition.rs  gate_fusion.rs  lazy_evaluation.rs  pipeline_demo.rs  template_matching_demo.rs
simq-compiler/src/: adaptive_pipeline.rs  analysis.rs  cache.rs  cached_compiler.rs  circuit_analysis_pass.rs  compiler.rs  decomposition.rs  execution_plan.rs  fusion.rs  fusion_cache.rs  hardware_aware.rs  lazy.rs  lib.rs  matrix_computation.rs  matrix_utils.rs  pipeline.rs
simq-compiler/tests/: compiler_internals.rs  comprehensive_e2e.rs  decomposition_internals.rs  integration_test.rs  lazy_evaluation.rs  passes_internals.rs
simq-core/: Cargo.toml
simq-core/benches/: noise_overhead.rs
simq-core/examples/: ascii_circuit.rs  bloch_sphere.rs  circuit_builder.rs  circuit_debugger.rs  circuit_serialization.rs  circuit_validation.rs  parameter_tracking.rs
simq-core/src/: ascii_renderer.rs  bloch_sphere.rs  circuit.rs  circuit_builder.rs  circuit_debugger.rs  dynamic_builder.rs  error.rs  gate.rs  latex_renderer.rs  lib.rs  parameter.rs  parameter_id.rs  parameter_registry.rs  qubit.rs  qubit_ref.rs  stateful_debugger.rs
simq-core/tests/: builder_integration.rs  comprehensive_e2e.rs  dag_validation.rs  edge_cases.rs  parameter_integration.rs  validation_performance.rs
simq-gates/: COMPILE_TIME_CACHING.md  CUSTOM_GATES_GUIDE.md  Cargo.toml  build.rs
simq-gates/benches/: compile_time_cache.rs  gate_operations.rs
simq-gates/examples/: custom_gates_tutorial.rs  gate_matrices.rs  lookup_table_demo.rs
simq-gates/src/: compile_time_cache.rs  custom.rs  gate_registry.rs  generated.rs  lib.rs  lookup.rs  matrices.rs  matrix_ops.rs  optimized.rs  standard.rs
simq-gates/tests/: all_gates_test.rs  comprehensive_e2e.rs  edge_cases.rs  macro_e2e.rs
simq-macros/: Cargo.toml
simq-macros/src/: lib.rs
simq-py/: Cargo.toml  MANIFEST.in  README.md  pyproject.toml  requirements-dev.txt
simq-py/examples/: 00_getting_started.py  basic_circuit.py  noise_simulation.py  parameterized_circuit.py  vqe_example.py
simq-py/src/: lib.rs
simq-py/tests/: __init__.py  conftest.py  test_backend.py  test_basic.py  test_circuit.py  test_gates.py  test_noise.py  test_simulation.py
simq-sim/: Cargo.toml
simq-sim/benches/: gradient.rs  simulator.rs  (+2 more)
simq-state/: Cargo.toml  QUICK_START.md  README.md
(+345 files in other folders)
