[package]
name = "ferriq-py"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "Python bindings for Ferriq quantum computing SDK"

[features]
default = ["ibm-quantum"]
ibm-quantum = []

[lib]
name = "ferriq"
crate-type = ["cdylib"]

[dependencies]
# PyO3 for Python bindings
pyo3 = { version = "0.21", features = ["extension-module", "abi3-py38", "num-complex"] }
numpy = "0.21"

# Ferriq crates (minimal set for Phase 0)
ferriq-core = { path = "../ferriq-core" }
ferriq-gates = { path = "../ferriq-gates" }
# Phase 5: Advanced features - backends and compiler
ferriq-state = { path = "../ferriq-state" }
ferriq-sim = { path = "../ferriq-sim" }
ferriq-backend = { path = "../ferriq-backend", features = ["local-simulator", "ibm-quantum"] }
ferriq-compiler = { path = "../ferriq-compiler" }

# Utility crates
num-complex.workspace = true
# ndarray.workspace = true
parking_lot.workspace = true
rand = "0.8"

[dev-dependencies]
approx.workspace = true
