[package]
name = "simq-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "Core types and traits for SimQ quantum computing SDK"

[dependencies]
num-complex.workspace = true
smallvec.workspace = true
thiserror.workspace = true
serde = { workspace = true, optional = true }
bincode = { version = "1.3", optional = true }
postcard = { version = "1.0", optional = true, features = ["alloc"] }
serde_json = { workspace = true, optional = true }
dashmap = { version = "5.5", optional = true }

[features]
default = []
serde = ["dep:serde", "dep:serde_json"]
serialization = ["serde", "dep:bincode"]
cache = ["serialization", "dep:dashmap"]

[dev-dependencies]
approx.workspace = true
