[package]
name = "simq-gates"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "Quantum gate library for SimQ"

[dependencies]
simq-core.workspace = true
num-complex.workspace = true
thiserror.workspace = true

[dev-dependencies]
approx.workspace = true
criterion.workspace = true

[[bench]]
name = "gate_operations"
harness = false
