[package]
name = "simq-sim"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "High-performance quantum simulator for SimQ"

[dependencies]
simq-core.workspace = true
simq-state.workspace = true
simq-gates.workspace = true
simq-compiler.workspace = true
num-complex.workspace = true
rayon.workspace = true
parking_lot.workspace = true
thiserror.workspace = true
tracing.workspace = true
thread-id = "5.0.0"
approx.workspace = true
ahash.workspace = true

# Optional GPU backend
wgpu = { version = "0.19", optional = true }

[dev-dependencies]
approx.workspace = true
criterion.workspace = true
tracing-subscriber.workspace = true

[features]
gpu = ["wgpu"]

[[bench]]
name = "simulator"
harness = false
